--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/reionut/finalResponsiveSite#readme",
   "dependencies": {
+    "bootstrap": "^4.1.2",
     "jquery": "^3.3.1"
   }
 }
